fixed allignment within portfolio and

--- a/APIdetails.html
+++ b/APIdetails.html
@@ -59,6 +59,18 @@
                   <li><a href="index.html#experience">Experience</a></li>
       
                   <li><a href="index.html#contact">Contact</a></li>
+                  <li class="drop-down">
+                    <a
+                      href=""
+                      data-toggle="tooltip"
+                      data-placement="right"
+                      title="Hover to preview, click to set"
+                      >Theme</a
+                    >
+                    <ul id="themeDrop">
+                    </ul>
+                  </li>
+    
                 </ul>
               </nav>
               <!-- .nav-menu -->
@@ -232,7 +244,6 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
-    <script  src="assets/js/state.js"></script>
     <script src="assets/js/main.js"></script>
 
 </body>
