--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -60,6 +60,17 @@
                   <li><a href="index.html#experience">Experience</a></li>
       
                   <li><a href="index.html#contact">Contact</a></li>
+                  <li class="drop-down">
+                    <a
+                      href=""
+                      data-toggle="tooltip"
+                      data-placement="right"
+                      title="Hover to preview, click to set"
+                      >Theme</a
+                    >
+                    <ul id="themeDrop">
+                    </ul>
+                  </li>
                 </ul>
               </nav>
               <!-- .nav-menu -->
