--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@
                           ><h4>Track</h4>
                           <p>
                             Competing in the 400m dash at the USA Track and
-                            Field Junior Olympics as a 16 year old. Running is
-                            much more relaxing these days.
+                            Field Junior Olympics in Miami as a 16 year old.
                           </p></span
                         >
                       </div>
@@ -283,7 +282,6 @@
                   <div class="owl-next"></div>
                 </div>
               </div>
-              <!--<img src="assets/img/about.jpg" class="img-fluid" alt="">-->
             </div>
             <div
               class="col-lg-6 pt-4 pt-lg-0 order-1 order-lg-1 content"
@@ -417,22 +415,22 @@
             <p></p>
           </div>
 
-          <div class="row" data-aos="fade-up">
-            <div class="col-lg-12 d-flex justify-content-center">
+          <!-- <div class="row" data-aos="fade-up"> -->
+            <!-- <div id="portFlex" class=" col-lg-12 d-flex justify-content-center"> -->
               <!--<ul id="portfolio-flters">
                                 <li data-filter="*" class="filter-active">All</li>
                                 <li data-filter=".filter-app">App</li>
                                 <li data-filter=".filter-card">Card</li>
                                 <li data-filter=".filter-web">Web</li>
                             </ul>-->
-            </div>
-          </div>
+            <!-- </div> -->
+          <!-- </div> -->
 
           <div id="portfolioDiv"
             class="row portfolio-container"
             data-aos="fade-up"
             data-aos-delay="150"
-            style="margin: 10px;"
+            style="height: 500px; margin: 10px;"
           >
           </div>
         </div>
@@ -961,7 +959,7 @@
     <script src="assets/vendor/aos/aos.js"></script>
 
     <!-- Template Main JS File -->
-    
+    <script src="assets/js/CreatePortfolio.js"></script>    
     <script src="assets/js/main.js"></script>
   </body>
 </html>
