added open austin

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </li>
                 <li>
                   <i class="icofont-spreadsheet"> </i>
-                  I started as a full-time developer in 2019, but have years of
+                  I started learning to code in 2018 and started developing full-time in 2019, but have years of
                   real-world experience designing wide-ranging solutions. My
                   gateway to programming was through Microsoft Excel as an
                   undergraduate in Finance. I continued to improve my skills,
