--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
           <ul
             id="portfolioDiv"
             class="row"
-            style="padding: 2rem;"
+            style="padding: 2rem; list-style: none;"
             data-aos="fade-up"
             data-aos-delay="150"
             style=" margin: 10px"
@@ -608,7 +608,7 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+   
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
