--- a/Compoundingdetails.html
+++ b/Compoundingdetails.html
@@ -44,7 +44,7 @@
 
   <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top header-scrolled">
+    <header id="header" style="top: 0" class="fixed-top header-scrolled">
       <div class="container d-flex align-items-center">
         <h1 class="logo mr-auto">
           <a href="index.html">Hi, I'm James Bock</a>
@@ -117,9 +117,9 @@
             <div class="portfolio-info">
               <h3>Project Summary</h3>
               <ul>
-                <li><strong>Tech</strong>: C#, UWP, SQL</li>
+                <li><strong>Tech</strong>: C#, Blazor, HTML, Sass,  UWP</li>
                 <li>
-                  <strong>Libraries</strong>: ReactiveUI, Dynamic Data, MediatR,
+                  <strong>Libraries</strong>: FHIR, MediatR,
                   Stateless, Entity Framework Core
                 </li>
                 <li>
@@ -158,7 +158,7 @@
               to the prescriber through the controls.
             </p>
             <p>
-              As shown above in the first image, this is shown when one
+              As seen above in the first image, this is shown when one
               Ingredient, containing the Factor Amino Acids, increases and the
               control of another Ingredient containing Amino Acids is modulated
               to reduce the amount of that Ingredient which is available for
@@ -166,7 +166,7 @@
               reached (in this case, the Policy with the lowest threshold is 5
               grams per kilogram of body weight), no Ingredient containing that
               Factor can be increased until one of the Ingredients is decreased
-              to prevent overordering. While all of this is happening, the
+              to prevent over-ordering. While all of this is happening, the
               totals of all Factors in the Order are updated in real time in the
               first column to the right and the second column is a summary of
               the amount the patient is receiving of each Factor across all
@@ -298,10 +298,7 @@
                 >. All Rights Reserved
               </div>
               <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
+           
                 Designed by
                 <a href="https://bootstrapmade.com/">BootstrapMade</a>
                 <div>Optimized by <a href="#hero">James Bock</a></div>
@@ -320,7 +317,7 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
