--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -40,7 +40,7 @@
 
 <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top header-scrolled">
+    <header id="header" style="top: 0" class="fixed-top header-scrolled">
         <div class="container d-flex align-items-center">
 
             <h1 class="logo mr-auto"><a href="index.html">Hi, I'm James Bock</a></h1>
@@ -86,9 +86,9 @@
 
                 <ol>
                     <li><a href="index.html">Home</a></li>
-                    <li>Drug Interactions</li>
+                    <li>FHIRScan</li>
                 </ol>
-                <h2>Drug Interactions</h2>
+                <h2>FHIRScan</h2>
 
             </div>
         </section><!-- End Breadcrumbs -->
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="portfolio-description">
-                    <h2>Drug Interaction (FHIRscan)</h2>
+                    <h2>(FHIRScan) Drug Interaction) )</h2>
                     <p>
                         FHIRScan provides a medication prescribing application that
                         has drug-drug interaction detection capabilities, sourced from
@@ -196,10 +196,7 @@
                             &copy; Copyright <strong><span>Day</span></strong>. All Rights Reserved
                         </div>
                         <div class="credits">
-                            <!-- All the links in the footer should remain intact. -->
-                            <!-- You can delete the links only if you purchased the pro version. -->
-                            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
+                          
                             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
                             <div>Optimized by <a href="#hero">James Bock</a></div>
                         </div>
@@ -217,7 +214,7 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+    
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
