--- a/NeonatalNutritiondetails.html
+++ b/NeonatalNutritiondetails.html
@@ -44,7 +44,7 @@
 
   <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top header-scrolled">
+    <header id="header" style="top: 0" class="fixed-top header-scrolled">
       <div class="container d-flex align-items-center">
         <h1 class="logo mr-auto">
           <a href="index.html">Hi, I'm James Bock</a>
@@ -211,10 +211,7 @@
                 >. All Rights Reserved
               </div>
               <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
+              
                 Designed by
                 <a href="https://bootstrapmade.com/">BootstrapMade</a>
                 <div>Optimized by <a href="#hero">James Bock</a></div>
@@ -233,7 +230,7 @@
     <script src="assets/vendor/jquery/jquery.min.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/jquery.easing/jquery.easing.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
+   
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/venobox/venobox.min.js"></script>
     <script src="assets/vendor/owl.carousel/owl.carousel.min.js"></script>
