--- a/WebDesigndetails.html
+++ b/WebDesigndetails.html
@@ -45,7 +45,7 @@
 
   <body>
     <!-- ======= Header ======= -->
-    <header id="header" class="fixed-top header-scrolled">
+    <header id="header" style="top: 0" class="fixed-top header-scrolled">
       <div class="container d-flex align-items-center">
         <h1 class="logo mr-auto">
           <a href="index.html">Hi, I'm James Bock</a>
@@ -125,13 +125,13 @@
                 <p>
                   Implemented IIFEs and JSON files to generate sections of the
                   webpage dynamically, so that when new projects are added, they
-                  can be added in to the JSON data and injected in to the
+                  can be added in as JSON data and injected in to the
                   webpage where appropriate
                 </p>
               </li>
               <li>
                 <p>
-                  The same technique was used with themes so the new ones can be
+                  The same technique was used with themes so new ones can be
                   added and the correct theme is presented across different
                   webpages in during the same session.
                 </p>
@@ -197,10 +197,6 @@
                 >. All Rights Reserved
               </div>
               <div class="credits">
-                <!-- All the links in the footer should remain intact. -->
-                <!-- You can delete the links only if you purchased the pro version. -->
-                <!-- Licensing information: https://bootstrapmade.com/license/ -->
-                <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/day-multipurpose-html-template-for-free/ -->
                 Designed by
                 <a href="https://bootstrapmade.com/">BootstrapMade</a>
                 <div>Optimized by <a href="index.html">James Bock</a></div>
