tpo in fhirscan

--- a/DrugInteracionsdetails.html
+++ b/DrugInteracionsdetails.html
@@ -122,7 +122,7 @@
                 </div>
 
                 <div class="portfolio-description">
-                    <h2>(FHIRScan) Drug Interaction) )</h2>
+                    <h2>FHIRScan (Drug Interactions)</h2>
                     <p>
                         FHIRScan provides a medication prescribing application that
                         has drug-drug interaction detection capabilities, sourced from
